# PostgreSQL-MCP

./: README.md  pyproject.toml  test_connection.py
.github/workflows/: python-publish.yml
src/postgresql_server_mcp/: server.py
